# Forcat-Backend

./: .gitignore  Dockerfile  db.sqlite3  docker-compose.yaml  pyproject.toml  pytest.ini
account/: models.py  tests.py
account/api/: google_oauth_views.py  kakao_oauth_views.py  naver_oauth_views.py  serializer.py  serializers.py  views.py
account/migrations/: 0001_initial.py  0002_catbreed_cat.py  0002_catbreeddata_catdata.py  0002_user_address_detail.py  0003_cat_profile_image_alter_cat_name.py  0004_alter_cat_profile_image.py  0005_merge_20241024_1717.py
forcatApp/: apps.py
forcatProject/: README.md  manage.py  settings.py  urls.py  wsgi.py
forcatProject/forcatProject/: asgi.py  urls.py
product/: models.py  tests.py
product/api/: filter.py  serializer.py  views.py
product/migrations/: 0001_initial.py  0002_category_productcategory_product_categories_and_more.py  0002_product_company.py  0003_alter_product_thumbnail_alter_productimage_image.py  0003_product_remain_count.py  0004_cart_cartitem_cart_products.py  0004_rename_thumbnail_product_thumbnail_url_and_more.py
