[tool.poetry]
name = "forcat-backend"
version = "0.1.0"
description = ""
authors = ["myoungjinGo-FE <cokemania2099@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
djangorestframework = "^3.15.2"
pillow = "^11.0.0"
drf-yasg = "^1.21.8"
pytest = "^8.3.3"
pytest-django = "^4.9.0"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
black = "^24.10.0"
django-filter = "^24.3"
django-cors-headers = "^4.5.0"
djangorestframework-simplejwt = "^5.3.1"
boto3 = "^1.35.47"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
